fixed logic behind edits added source input logic

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -117,3 +117,7 @@ input {
   overflow-y: auto;
   height: 80vh;
 }
+
+h1{
+  color: #fff;
+}
